--- a/assets/ydeploy.css
+++ b/assets/ydeploy.css
@@ -20,7 +20,7 @@
 }
 
 .ydeploy-is-not-deployed .ydeploy-badge {
-    background-color: #0f6;
+    background-color: #62D9BC;
 }
 
 .ydeploy-stage-staging .ydeploy-badge,
